{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 119,
  "lineage": "708cbdc3-38fb-130b-9db2-b5c6adbe1bc3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00158097b48541405",
            "domain": "vpc",
            "id": "eipalloc-00158097b48541405",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-108-128.compute-1.amazonaws.com",
            "public_ip": "52.22.108.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:internet-gateway/igw-0283faf67b215cc3f",
            "id": "igw-0283faf67b215cc3f",
            "owner_id": "329599619981",
            "tags": {
              "Name": "app1_IG",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1_IG",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app1_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:329599619981:loadbalancer/app/app1-load-balancer/a1450f1bd7a57117",
            "arn_suffix": "app/app1-load-balancer/a1450f1bd7a57117",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app1-load-balancer-1955774132.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:329599619981:loadbalancer/app/app1-load-balancer/a1450f1bd7a57117",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app1-load-balancer",
            "security_groups": [
              "sg-02792845731fff16f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001e3619974d8b4a3"
              },
              {
                "subnet_id": "subnet-02fcc584b4bed57a5"
              },
              {
                "subnet_id": "subnet-0847f7737396cc2b5"
              }
            ],
            "subnets": [
              "subnet-001e3619974d8b4a3",
              "subnet-02fcc584b4bed57a5",
              "subnet-0847f7737396cc2b5"
            ],
            "tags": {
              "Name": "App1LoadBalancer",
              "Owner": "ECS",
              "Project": "MultiApp",
              "Service": "MultiApp"
            },
            "tags_all": {
              "Name": "App1LoadBalancer",
              "Owner": "ECS",
              "Project": "MultiApp",
              "Service": "MultiApp"
            },
            "vpc_id": "vpc-0d1cfbec354ab5797",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.app1-sg02-LB01",
            "aws_subnet.public-us-east-1a",
            "aws_subnet.public-us-east-1b",
            "aws_subnet.public-us-east-1c",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:329599619981:listener/app/app1-load-balancer/a1450f1bd7a57117/8c2de87ad319209a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:329599619981:targetgroup/app1-target-group/96cb7977a1cebdde",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:329599619981:listener/app/app1-load-balancer/a1450f1bd7a57117/8c2de87ad319209a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:329599619981:loadbalancer/app/app1-load-balancer/a1450f1bd7a57117",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app1_alb",
            "aws_lb_target_group.app1_tg",
            "aws_security_group.app1-sg02-LB01",
            "aws_subnet.public-us-east-1a",
            "aws_subnet.public-us-east-1b",
            "aws_subnet.public-us-east-1c",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:329599619981:listener/app/app1-load-balancer/a1450f1bd7a57117/db97c1e1dc8eae32",
            "certificate_arn": "arn:aws:acm:us-east-1:329599619981:certificate/3dcabd10-7e38-4c48-baa9-cc9f2303eff1",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:329599619981:targetgroup/app2tg443/0906c62634b978c5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:329599619981:listener/app/app1-load-balancer/a1450f1bd7a57117/db97c1e1dc8eae32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:329599619981:loadbalancer/app/app1-load-balancer/a1450f1bd7a57117",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app1_alb",
            "aws_lb_target_group.app2_tg_443",
            "aws_security_group.app1-sg02-LB01",
            "aws_subnet.public-us-east-1a",
            "aws_subnet.public-us-east-1b",
            "aws_subnet.public-us-east-1c",
            "aws_vpc.app1",
            "data.aws_acm_certificate.cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app1_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:329599619981:targetgroup/app1-target-group/96cb7977a1cebdde",
            "arn_suffix": "targetgroup/app1-target-group/96cb7977a1cebdde",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:329599619981:targetgroup/app1-target-group/96cb7977a1cebdde",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app1-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "ECS",
              "Project": "App1",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "ECS",
              "Project": "App1",
              "Service": "App1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app2_tg_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:329599619981:targetgroup/app2tg443/0906c62634b978c5",
            "arn_suffix": "targetgroup/app2tg443/0906c62634b978c5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:329599619981:targetgroup/app2tg443/0906c62634b978c5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app2tg443",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app2_tg_443",
              "Owner": "ECS",
              "Project": "App2",
              "Service": "App2"
            },
            "tags_all": {
              "Name": "app2_tg_443",
              "Owner": "ECS",
              "Project": "App2",
              "Service": "App2"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00158097b48541405",
            "connectivity_type": "public",
            "id": "nat-097adebad39995c60",
            "network_interface_id": "eni-0df1388b0d853d529",
            "private_ip": "10.32.1.254",
            "public_ip": "52.22.108.128",
            "subnet_id": "subnet-001e3619974d8b4a3",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:route-table/rtb-004d0cfeeeec905f7",
            "id": "rtb-004d0cfeeeec905f7",
            "owner_id": "329599619981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-097adebad39995c60",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:route-table/rtb-0b3013bb35b88cfe4",
            "id": "rtb-0b3013bb35b88cfe4",
            "owner_id": "329599619981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0283faf67b215cc3f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e34f30d8bb81ead8",
            "route_table_id": "rtb-004d0cfeeeec905f7",
            "subnet_id": "subnet-0a815d9092ef24feb"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c64925a5a9aa7cc",
            "route_table_id": "rtb-004d0cfeeeec905f7",
            "subnet_id": "subnet-068b006a9bba2c151"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc94ba20a3eb44a2",
            "route_table_id": "rtb-004d0cfeeeec905f7",
            "subnet_id": "subnet-05eedd71c4ea2aee2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1c",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086fafbf92970514f",
            "route_table_id": "rtb-0b3013bb35b88cfe4",
            "subnet_id": "subnet-001e3619974d8b4a3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ae91a37c85b144b",
            "route_table_id": "rtb-0b3013bb35b88cfe4",
            "subnet_id": "subnet-02fcc584b4bed57a5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0781bd552af3f7531",
            "route_table_id": "rtb-0b3013bb35b88cfe4",
            "subnet_id": "subnet-0847f7737396cc2b5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1c",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app1-sg01-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:security-group/sg-01e5a6ed6efeb9646",
            "description": "app1-sg01-servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e5a6ed6efeb9646",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app1-sg01-servers",
            "name_prefix": "",
            "owner_id": "329599619981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1-sg01-servers",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1-sg01-servers",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app1-sg02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:security-group/sg-02792845731fff16f",
            "description": "app1-sg02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02792845731fff16f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Secure",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "app1-sg02-LB01",
            "name_prefix": "",
            "owner_id": "329599619981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1-sg02-LB01",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1-sg02-LB01",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app1-sg03-secure-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:security-group/sg-0997dc0693c475661",
            "description": "app1-sg03-secure-servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0997dc0693c475661",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app1-sg03-secure-servers",
            "name_prefix": "",
            "owner_id": "329599619981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1-sg03-secure-servers",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1-sg03-secure-servers",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:subnet/subnet-0a815d9092ef24feb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.32.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a815d9092ef24feb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "329599619981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:subnet/subnet-068b006a9bba2c151",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.32.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068b006a9bba2c151",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "329599619981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:subnet/subnet-05eedd71c4ea2aee2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.32.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eedd71c4ea2aee2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "329599619981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-us-east-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:subnet/subnet-001e3619974d8b4a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001e3619974d8b4a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "329599619981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:subnet/subnet-02fcc584b4bed57a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fcc584b4bed57a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "329599619981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:subnet/subnet-0847f7737396cc2b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0847f7737396cc2b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "329599619981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-us-east-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d1cfbec354ab5797"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599619981:vpc/vpc-0d1cfbec354ab5797",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-0f45b0c020ce008d4",
            "default_route_table_id": "rtb-035653b0d8b7198ca",
            "default_security_group_id": "sg-0c05996cbde08565a",
            "dhcp_options_id": "dopt-0c7d4a67b33c21f21",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d1cfbec354ab5797",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035653b0d8b7198ca",
            "owner_id": "329599619981",
            "tags": {
              "Name": "app1",
              "Owner": "Chewbacca",
              "Planet": "Mustafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1",
              "Owner": "Chewbacca",
              "Planet": "Mustafar",
              "Service": "application1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}